--- a/public/css/mega-nav.css
+++ b/public/css/mega-nav.css
@@ -85,21 +85,13 @@ Main components
 .cd-header-buttons {
   position: absolute;
   display: inline-block;
-  top: 3px;
+  top: 9px;
   right: 5%;
 }
 .cd-header-buttons li {
   display: inline-block;
 }
-@media only screen and (max-width: 1169px) {
-  .nav-on-left .cd-header-buttons {
-    right: auto;
-    left: 5%;
-  }
-  .nav-on-left .cd-header-buttons li {
-    float: right;
-  }
-}
+
 @media only screen and (min-width: 1170px) {
   .cd-header-buttons {
     top: 18px;
@@ -142,13 +134,13 @@ Main components
   width: 18px;
   height: 18px;
   border-radius: 50%;
-  border: 3px solid #2e3233;
+  border: 2px solid #37363c;
 }
 .cd-search-trigger::after {
   /* handle */
-  height: 3px;
+  height: 2px;
   width: 8px;
-  background: #2e3233;
+  background: #37363c;
   bottom: 14px;
   right: 11px;
   -webkit-transform: rotate(45deg);
@@ -170,13 +162,13 @@ Main components
   content: '';
   position: absolute;
   display: inline-block;
-  height: 3px;
+  height: 2px;
   width: 22px;
   top: 50%;
   margin-top: -2px;
   left: 50%;
   margin-left: -11px;
-  background: #2e3233;
+  background: #37363c;
   opacity: 0;
   /* Force Hardware Acceleration in WebKit */
   -webkit-transform: translateZ(0);
@@ -231,9 +223,9 @@ Main components
   /* hamburger icon in CSS */
   position: absolute;
   display: inline-block;
-  height: 3px;
+  height: 2px;
   width: 24px;
-  background: #2e3233;
+  background: #37363c;
 }
 .cd-nav-trigger span {
   /* line in the center */
@@ -280,7 +272,7 @@ Main components
 }
 .cd-nav-trigger.nav-is-visible span::before, .cd-nav-trigger.nav-is-visible span::after {
   /* keep visible other 2 lines */
-  background: #2e3233;
+  background: #37363c;
 }
 .cd-nav-trigger.nav-is-visible span::before {
   -webkit-transform: translateX(4px) translateY(-3px) rotate(45deg);
@@ -305,7 +297,7 @@ Main components
 .cd-primary-nav, .cd-primary-nav ul {
   position: fixed;
   height: 100%;
-  background: #2e3233;
+  background: #fff;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 1;
@@ -363,6 +355,8 @@ Main components
   .nav-on-left .cd-primary-nav, .nav-on-left .cd-primary-nav ul {
     right: auto;
     left: 0;
+    top: 0;
+    width: 260px;
   }
 }
 .cd-primary-nav .see-all a {
@@ -390,7 +384,7 @@ Main components
   padding-left: 75px;
 }
 .cd-primary-nav .cd-nav-icons .cd-nav-item p {
-  color: #2e3233;
+  color: #37363c;
   font-size: 1.3rem;
   /* hide description on small devices */
   display: none;
@@ -473,10 +467,6 @@ Main components
     transform: translateX(0);
     opacity: 1;
   }
-  .cd-primary-nav > li {
-    float: left;
-    margin-left: 3em;
-  }
   .cd-primary-nav > li > a {
     /* main navigation buttons style */
     position: relative;
@@ -549,8 +539,8 @@ Main components
     transition: color 0.2s, background 0.2s, border 0.2s;
   }
   .cd-primary-nav .cd-secondary-nav > .see-all a:hover, .cd-primary-nav .cd-nav-gallery > .see-all a:hover, .cd-primary-nav .cd-nav-icons > .see-all a:hover {
-    background: #2e3233;
-    border-color: #2e3233;
+    background: #37363c;
+    border-color: #37363c;
     color: #ffffff;
   }
   .cd-primary-nav .cd-secondary-nav > li {
@@ -672,7 +662,7 @@ Main components
   display: inline-block;
   height: 2px;
   width: 10px;
-  background: #464c4e;
+  background: #c7c7c9;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -692,10 +682,10 @@ Main components
 }
 @media only screen and (min-width: 1170px) {
   .has-children > a::before, .has-children > a::after, .go-back a::before, .go-back a::after {
-    background: #c9cbc4;
+    background: #c7c7c9;
   }
   .has-children > a:hover::before, .has-children > a:hover::after, .go-back a:hover::before, .go-back a:hover::after {
-    background: #69aa6f;
+    background: #c7c7c9;
   }
 }
 
@@ -712,12 +702,9 @@ Main components
   transform-origin: 9px 50%;
 }
 
-.cd-primary-nav .go-back a {
-  padding-left: 40px;
-}
+
 .cd-primary-nav .go-back a::before, .cd-primary-nav .go-back a::after {
   /* arrow goes on the left side - go back button */
-  left: 20px;
   -webkit-transform-origin: 1px 50%;
   -moz-transform-origin: 1px 50%;
   -ms-transform-origin: 1px 50%;
@@ -796,35 +783,6 @@ Main components
   height: 100%;
   width: 100%;
 }
-.cd-search input {
-  border-radius: 0;
-  border: none;
-  background: #ffffff;
-  height: 100%;
-  width: 100%;
-  padding: 0 5%;
-  box-shadow: inset 0 1px 0 #e2e3df, 0 3px 6px rgba(0, 0, 0, 0.05);
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-}
-.cd-search input::-webkit-input-placeholder {
-  color: #c9cbc4;
-}
-.cd-search input::-moz-placeholder {
-  color: #c9cbc4;
-}
-.cd-search input:-moz-placeholder {
-  color: #c9cbc4;
-}
-.cd-search input:-ms-input-placeholder {
-  color: #c9cbc4;
-}
-.cd-search input:focus {
-  outline: none;
-}
 .cd-search.is-visible {
   opacity: 1;
   visibility: visible;
@@ -847,7 +805,7 @@ Main components
   }
 }
 
-.overlay {
+.cd-overlay {
   /* shadow layer visible when navigation is active */
   position: fixed;
   z-index: 2;
@@ -865,7 +823,7 @@ Main components
   -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s, -moz-transform 0.3s 0s;
   transition: opacity 0.3s 0s, visibility 0s 0.3s, transform 0.3s 0s;
 }
-.overlay.is-visible {
+.cd-overlay.is-visible {
   opacity: 1;
   visibility: visible;
   -webkit-transition: opacity 0.3s 0s, visibility 0s 0s, -webkit-transform 0.3s 0s;
@@ -873,21 +831,23 @@ Main components
   transition: opacity 0.3s 0s, visibility 0s 0s, transform 0.3s 0s;
 }
 @media only screen and (max-width: 1169px) {
-  .overlay.is-visible {
+  .cd-overlay.is-visible {
     -webkit-transform: translateX(-260px);
     -moz-transform: translateX(-260px);
     -ms-transform: translateX(-260px);
     -o-transform: translateX(-260px);
     transform: translateX(-260px);
   }
-  .nav-on-left .overlay.is-visible {
+  .nav-on-left .cd-overlay.is-visible {
     -webkit-transform: translateX(260px);
     -moz-transform: translateX(260px);
     -ms-transform: translateX(260px);
     -o-transform: translateX(260px);
     transform: translateX(260px);
   }
-  .overlay.is-visible.search-is-visible, .nav-on-left .overlay.is-visible.search-is-visible {
+  .cd-overlay.is-visible.search-is-visible,
+  .nav-on-left .cd-overlay.is-visible.search-is-visible,
+  .nav-on-left .cd-overlay.is-visible {
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
     -ms-transform: translateX(0);
