--- a/scss/app.scss
+++ b/scss/app.scss
@@ -47,9 +47,6 @@ $dir: ltr;
 //select2-develop
 @import "select2-develop/core";
 
-/* slick slider component*/
-
-@import "modules/slick";
 /* BASE - Base styles , variables, mixins, etc*/
 @import "base/mixins";
 @import "base/normalize";
@@ -58,30 +55,31 @@ $dir: ltr;
 /*MODULES  - Individual site components */
 @import "modules/typography";
 @import "modules/blocks";
-@import "modules/buttons";
-@import "modules/checkbox";
-@import "modules/list-group";
 @import "modules/components";
 @import "modules/select";
-@import "modules/sections";
-@import "modules/title";
-@import "modules/dialog";
-@import "modules/social-media";
-@import "modules/renderField";
-@import "modules/renderFileInput";
-@import "modules/number_picker";
-@import "modules/product_grid_view";
-@import "modules/product_list_view";
-@import "modules/customer_service";
-@import "modules/render_products";
-@import "modules/_scroll_to_top";
+@import "modules/buttons";
+//@import "modules/checkbox";
+//@import "modules/list-group";
+// @import "modules/sections";
+// @import "modules/title";
+// @import "modules/dialog";
+// @import "modules/social-media";
+// @import "modules/renderField";
+// @import "modules/renderFileInput";
+// @import "modules/number_picker";
+// @import "modules/product_grid_view";
+// @import "modules/product_list_view";
+// @import "modules/customer_service";
+// @import "modules/render_products";
+// @import "modules/_scroll_to_top";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/nav";
 @import "layouts/header";
-@import "layouts/manual-form";
+@import "layouts/footer";
 @import "layouts/home-details";
-@import "layouts/products";
+//@import "layouts/manual-form";
+//@import "layouts/products";
 //@import "layouts/product";
 //@import "layouts/apps-link";
 //@import "layouts/authentication/login";
@@ -93,7 +91,7 @@ $dir: ltr;
 // @import "layouts/setting/wish-list";
 // @import "layouts/setting/setting";
 // @import "layouts/garage-popup";
-// @import "state/checkout/cart";
+ @import "state/checkout/cart";
 // @import "state/checkout/order_summary.scss";
 // @import "layouts/quotation-request";
 // @import "layouts/send-request";
@@ -101,7 +99,6 @@ $dir: ltr;
 // @import "layouts/authentication/forgot-password";
 // @import "layouts/authentication/confirm-signup";
 // @import "layouts/authentication/email-verification";
-@import "layouts/footer";
 //@import "layouts/setting/profile";
 // @import "layouts/setting/reset-password";
 // @import "layouts/setting/garage";
