--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -178,3 +178,14 @@
     margin-right: #{$i}px;
   }
 }
+//mega nav sm breakpoint
+@mixin nav-sm-media {
+  @media only screen and (max-width: 1169px) {
+    @content;
+  }
+}
+@mixin nav-lg-media {
+  @media only screen and (min-width: 1170px) {
+    @content;
+  }
+}
