--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,4 +1,15 @@
+#header-fixed{
+  width: 100%;
+  z-index: 3;
+  top: 0;
+  background: $white;
+  position: fixed;
+  @include nav-sm-media{
+    background: transparent
+  };
+}
 .main-header{
+  @include transition(all, 0.3s, ease);
   @extend .position-relative;
   z-index: 4;
   background: $white;
@@ -6,18 +17,41 @@
   padding-top: 10px;
   padding-bottom: 10px;
   height: 65px;
-  .brand{
-    @extend .d-block;
-    img{
-      width: 117px;
-      @extend .d-block;
-      margin-top: -1px;
-    }
+  @include nav-sm-media{
+    display: none;
+  };
+}
+.data-setting {
+  position: relative;
+  top: 10px;
+  z-index: 4;
+  .input-group {
+    position: relative;
   }
-  .main-search{
+  .ship-to {
+    @include font-size(14px);
+  }
+  .select__value-container{
+    padding: 1px 5px;
+  }
+  .select__menu{
+    margin-top: 14px;
+    z-index: 100;
+  }
+  .seperator {
+    height: 20px;
+  }
+}
+.lang {
+      padding-#{$left}: 2px;
+      @include if-ltr {
+        font-family: 'Cairo', sans-serif;
+        font-weight: 400;
+      }
+    }
+.main-search{
     margin-top: 2px;
     @extend .input-group;
-    @extend .position-relative;
     .form-control{
       background: $light-gray;
       height: 40px;
@@ -29,7 +63,7 @@
       }
     }
     button{
-      @extend .position-absolute;
+      position: absolute;
       top: 0;
       #{$right}: 0;
       width: 35px;
@@ -47,74 +81,34 @@
         margin-top: 1px;
       }
     }
-
   }
-  .setting {
-    @extend .position-relative;
-    top: 10px;
-    z-index: 4;
-    .input-group {
-      @extend .position-relative;
-      .ship-to {
-        @include font-size(14px);
-      }
-      .select__value-container{
-        padding: 1px 5px;
-      }
-      .select__menu{
-        margin-top: 14px;
-        z-index: 100;
-      }
+.brand{
+    @extend .d-block;
+    img{
+      width: 117px;
+      margin-top: -1px;
     }
-    .seperator {
-      height: 20px;
-    }
-    .lang {
-      padding-#{$left}: 2px;
-      @include if-ltr {
-        font-family: 'Cairo', sans-serif;
-        //@include font-size(13px);
-        font-weight: 400;
-      }
-    }
-
   }
-}
 .user-actions{
   @extend .float-#{$right};
   margin-top: 13px;
-  @extend .col-auto;
+  @include nav-sm-media{
+    margin-top: 20px;
+  };
   > ul{
     @extend .d-flex;
-    @extend .mb-0 ;
     @extend .list-unstyled;
-    @extend .pb-0;
+    margin-bottom: 0;
+    padding-bottom: 0;
     > li{
-      @extend .d-inline-block;
       margin-#{$right}: 15px;
       &:last-child{
         margin-#{$right}: 0;
       }
-    }
-  }
-  .user-account {
-    @include font-size(13.8px);
-    .user-img {
-      margin-#{$right}: 5px;
-      top: -1px;
-      @extend .position-relative;
-      @extend .d-inline-block;
-      width: 20px;
-      img {
-        max-width: 100%;
+      &.search-sm{
+        margin-#{$right}: 2px;
+        margin-top: -2px;
       }
-    }
-    .seperator {
-      height: 12px;
-      margin: -1px 5px 0;
-    }
-    b {
-      font-weight: 500;
     }
   }
   .icon-cart {
@@ -130,7 +124,7 @@
   }
   .dropdown-menu{
     overflow: hidden;
-    border-radius: side-values(0px 0px 20px 20px);
+    border-radius: side-values(0px 0px $border-radius-base $border-radius-base);
     #{$left}: auto !important;
     #{$right}: 0 !important;
     top: 15px !important;
@@ -144,62 +138,6 @@
       font-weight: 400;
       @extend .text-capitalize;
     }
-    .signin-list{
-      @extend .mx-3;
-      @extend .px-0;
-      @extend .d-flex;
-      @extend .flex-nowrap;
-      @extend .link-border-radius;
-      overflow: hidden;
-      margin-bottom: 17px;
-      li{
-        @extend .d-inline-block;
-        margin-#{$right}: 5px;
-        a{
-          @include transition(all, 0.5s, ease);
-          height: 40px;
-          padding-top: 10px;
-          padding-bottom: 10px;
-          @extend .text-center;
-          min-width: 40px;
-          background: $light-gray;
-          @extend .d-block;
-          .icon-facebook-logo{
-            @include font-size(19px);
-          }
-          .icon-twitter{
-            @include font-size(22px);
-
-          }
-          > img{
-            max-width: 18px;
-          }
-          &:hover{
-            background: darken($light-gray, 2%);
-          }
-        }
-        &:first-child{
-          a{
-            padding-top: 7px;
-            @extend .btn-primary;
-            white-space: nowrap;
-            border-radius: 0 !important;
-            @extend .text-capitalize;
-            @include font-size(18px);
-            i{
-              @include font-size(17px);
-              margin-#{$left}: 3px;
-              &:before{
-                top: 3px;
-              }
-            }
-          }
-        }
-        &:last-child{
-          margin-#{$right}: 0;
-        }
-      }
-    }
     > p{
       @extend .px-3;
       @include font-size(15px);
@@ -209,6 +147,7 @@
         font-weight: 400;
         padding-#{$left}: 5px;
         i{
+          @include transition(all, 0.5s, ease);
           padding-#{$left}: 5px;
           @include font-size(14px);
 
@@ -223,7 +162,63 @@
         }
       }
     }
-    .account-actions{
+  }
+}
+.signin-list{
+      @extend .mx-3;
+      @extend .px-0;
+      @extend .d-flex;
+      @extend .flex-nowrap;
+      margin-bottom: 17px;
+      li{
+        @extend .d-inline-block;
+        margin-#{$right}: 5px;
+        a{
+          height: 40px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          @extend .text-center;
+          min-width: 40px;
+          background: $light-gray;
+          @extend .d-block;
+          .icon-facebook{
+            @include font-size(19px);
+          }
+          > img{
+            max-width: 18px;
+            margin-top: -4px;
+          }
+          &:hover{
+            background: darken($light-gray, 2%);
+          }
+        }
+        &:first-child{
+          a{
+            padding-top: 7px;
+            @extend .btn-primary;
+            white-space: nowrap;
+            border-radius: side-values(0 0 0 $border-radius-base) !important;
+            @extend .text-capitalize;
+            @include font-size(18px);
+            i{
+              @include font-size(17px);
+              margin-#{$left}: 3px;
+              &:before{
+                top: 3px;
+              }
+            }
+          }
+        }
+        &:last-child{
+          margin-#{$right}: 0;
+          a{
+            border-radius: side-values(0 0 $border-radius-base 0);
+
+          }
+        }
+      }
+    }
+.account-actions{
       @extend .px-3;
       background: $light-gray;
       @extend .list-unstyled;
@@ -232,7 +227,7 @@
       > li{
         @extend .flex-fill;
         a{
-          padding: 5px 0;
+          padding: 5px 10px;
           @include font-size(13px);
           @extend .d-flex;
           white-space: nowrap;
@@ -255,281 +250,34 @@
 
       }
     }
-  }
-}
-//END NEW HEADER
-
-.q-burger-btn {
-  height: 50px;
-}
-.mobile-header {
-  height: 50px;
-  .brand {
-    img {
-      width: 100px;
-      height: auto;
-    }
-  }
-  .custom-order {
-    padding: inherit;
-    display: inline;
-    .icon-custom-order {
-      color: $basic-black;
-    }
-  }
-}
-
-//header Sing In / Join
-
-
-#mobile-header-details {
-  button {
-    font-size: inherit;
-    i {
-      #{$left}: 0;
-    }
-  }
-  .user-actions {
-    margin: 0px;
-    padding: 0px;
-    background: $basic-gray;
-    margin-bottom: 35px;
-    .user-account {
-      display: flex;
-      color: white;
-      margin: side-values(0px 0px 11px 0px);
-      .user-img {
-        margin-#{$right}: 7px;
-        display: inline-block;
-        img {
-          margin-#{$right}: 7px;
-          border-radius: 50px;
-          background: white;
-          max-width: 200%;
-          width: 44px;
-          padding: 7px;
-        }
-      }
-      p {
-        margin-#{$left}: 20px;
-        line-height: 34px;
-      }
-    }
-  }
-  .btn-link {
-    background: none;
-    color: black;
-  }
-  .sidebar-icon {
-    margin-bottom: 30px;
-    div {
-      display: flex;
-    }
-    i {
-      font-size: 15px;
-    }
-    span {
-      margin-#{$left}: 7px;
-    }
-  }
-  .select__single-value {
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: $left;
-    color: $basic-gray;
-  }
-  .setting {
-    padding: 0px;
-    .ship-to {
-      font-size: 13px;
-    }
-    .lang-toggle {
-      display: flex;
-      a {
-        line-height: 12px;
-      }
-    }
-  }
-  .downloadApp {
-    display: flex;
-    margin: side-values(34px 0px 34px 0px);
-    p {
-      display: inline-block;
-      margin: 0px;
-    }
-    i {
-      margin-#{$left}: 10px;
-      font-size: 20px;
-      line-height: 18px;
-    }
-  }
-  .footer-sideBar {
-    margin: 0px;
-    li {
-      background: $light-gray;
-      list-style-type: none;
-      p {
-        line-height: 13px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-#{$left}: 7px;
-      }
-      i {
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-    }
-  }
-  //header Sing In / Join
-  .dropdown-header {
-    p {
-      opacity: 0.6;
-      font-family: Roboto;
-      font-size: 15px;
-      font-weight: 300;
-      text-align: $left;
-      color: rgba(55, 54, 61, 0.6);
-      text-transform: none;
-      display: inline-block;
-      margin: 0px;
-    }
-    .user {
-      display: flex;
-      margin-top: 21px;
-      margin-bottom: 21px;
-      p {
-        opacity: 0.6;
-        font-family: Roboto;
-        font-size: 23px;
-        font-weight: 300;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 50px;
-        margin-bottom: 0px;
-        letter-spacing: normal;
-        text-align: left;
-        color: rgba(55, 54, 61, 0.6);
-      }
+.user-account {
+    @include font-size(13.8px);
+    @include nav-sm-media{
+      display: none !important;
+    };
+    .user-img {
+      margin-#{$right}: 5px;
+      top: -1px;
+      width: 20px;
       img {
-        margin-#{$right}: 7px;
-        background-color: $light-gray;
-        border-radius: 50px;
-        width: 50px;
-        height: 50px;
-        padding: 10px;
+        max-width: 100%;
       }
     }
-    .join-us {
-      display: flex;
-      i {
-        line-height: 26px;
-        margin-#{$left}: 5px;
-      }
-    }
-    .join-us-text {
-      font-family: Roboto;
-      font-size: 15px;
-      font-weight: 500;
-      text-align: $left;
-      color: $basic-gray;
-      text-transform: none;
-      margin-#{$left}: 8px;
-    }
-    .btn {
-      background: $light-gray;
-      text-transform: none;
-      @include transition(all, 0.5s, ease);
-      cursor: pointer;
-    }
-    .btn-primary {
-      @extend .btn;
-      border-style: none;
-      background: $brand-color;
-      color: $white;
-      font-size: 15px;
-    }
-    .btn-facebook {
-      margin-#{$left}: 3px;
-      background-color: $light-gray;
-      color: #475993;
-      font-size: 20px;
-      line-height: 48px;
-      border-radius: side-values(0) !important;
-      box-shadow: none;
-    }
-    .btn-google{
-      margin-#{$left}: 3px;
-      background-color: $light-gray;
-      color: #475993;
-      line-height: 48px;
-      border-radius: side-values(0) !important;
-      box-shadow: none;
-      img{
-        height: 48px;
-        max-width: none;
-        width: 30px;
-      }
-    }
-    .btn-twitter {
-      margin-#{$left}: 3px;
-      background-color: $light-gray;
-      color: #475993;
-      font-size: 20px;
-      line-height: 48px;
-      border-radius: side-values(0px 20px 20px 0px) !important;
-      box-shadow: none;
-    }
-  }
-  .dropdown-footer {
-    margin-#{$left}: 10px;
-    p {
-      opacity: 1;
-      width: 58px;
+    .seperator {
       height: 12px;
-      margin: 0px;
-      font-family: Roboto;
-      font-size: 12px;
+      margin: -1px 5px 0;
+    }
+    b {
       font-weight: 500;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: $left;
-      color: $basic-gray;
-      display: inline-block;
-      text-transform: none;
-    }
-    img {
-      width: 15px;
-      height: 15px;
     }
   }
-  .slider-back {
-    margin-top: 17px;
-    margin-#{$left}: 15px;
-    display: flex;
-    p {
-      margin-#{$left}: 3px;
-      font-family: Roboto;
-      font-size: 15px;
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 20px;
-      letter-spacing: normal;
-      text-align: left;
-      color: $dark-charcoal-grey;
-    }
-    i {
-      font-size: 17px;
-    }
+.slideUp {
+  .main-header{
+    @include opacity(0);
   }
-  .btn-primary {
-    background: black;
+}
+.slideDown {
+  .main-header{
+    @include opacity(1);
   }
 }
