--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -28,7 +28,7 @@ $dark-80: rgba(39, 39, 52, 0.8);
 $green: #24b450;
 $input-placeholder-color: rgba(55, 54, 60, 0.7);
 //img
-$img-path: "../../public/img";
+$img-path: "/img";
 
 //border-radius-base
 $border-radius-base: 20px;
@@ -47,7 +47,7 @@ $max-container-popup : 900px;
 $padding-left: 128px;
 
 //ICON
-$icon-path: "../../public/icon";
+$icon-path: "/icon";
 $icon-font-name: "q-parts-icons";
 
 $section-p-b : 70px;
