--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -1,209 +1,9 @@
-#results-container {
-  background-color: $light-gray;
-
-  .filter-container {
-    min-width: 15em;
-    text-align: start;
-    margin: 20px 0 0px 20px;
-
-    .search-box {
-      background-color: $light-gray;
-      border: none;
-      height: 35px;
-      @include padding-left(28px);
-      margin-bottom: 19px;
-      @include boarder-left-radius(20px, 20px);
-      @include boarder-right-radius(0, 20px);
-
-      &::placeholder {
-        opacity: 0.5;
-        color: $input-placeholder-color;
-      }
-    }
-
-    .icon-search {
-      position: absolute;
-      z-index: 10;
-      top: 19%;
-      @include padding-left(12px);
-      @include q-placeholder;
-      opacity: 0.5;
-      color: $black !important;
-    }
-
-    .search-box-min-container {
-      @include padding-right(0);
-      .search-box-min {
-        background-color: $light-gray;
-        border: none;
-        height: 35px;
-        @include boarder-left-radius(20px, 20px);
-      }
-    }
-
-    .search-box-max-container {
-      @include padding-right(0);
-      .search-box-min {
-        background-color: $light-gray;
-        border: none;
-        height: 35px;
-        @include boarder-left-radius(20px, 20px);
-      }
-    }
-
-    .search-box-btn-container {
-      @include padding-left(6px);
-    }
-
-    .search-box-max {
-      background-color: $light-gray;
-      border: none;
-      height: 35px;
-      @include margin-right(3px);
-      @include boarder-right-radius(0, 20px);
-    }
-
-    .btn-primary {
-      height: 35px;
-      padding-top: 5px;
-      width: 100%;
-    }
-
-    .filter-category {
-      padding-top: 14px;
-      border: none;
-      border-radius: 0;
-
-      &:not(:last-child) {
-        margin-bottom: 2px;
-      }
-      p {
-        font-weight: 500;
-        @include font-size(18px);
-      }
-      .filter-body {
-        border: none;
-        .card-body {
-          padding: 0;
-        }
-      }
-      .dropdown-icon {
-        padding-top: 4px;
-      }
-      &:first-child {
-        border-radius: corner-values(20px 0 0 0);
-      }
-      &:last-child {
-        border-radius: corner-values(0 0 20px 20px);
-      }
-    }
-  }
-
-  .products-container {
-    width: 100%;
-    .search-control-panel {
-      margin: side-values(20px 0 0px 0);
-      margin-bottom: 26px;
-      .select__container {
-        position: relative !important;
-        @include margin-left(10px);
-        @include margin-right(22px);
-        height: 35px;
-        background-color: #f6f6f6;
-        border-radius: side-values(20px 0 20px 20px);
-        .select__single-value {
-          font-family: Roboto;
-          @include font-size(15px);
-          font-weight: normal;
-          color: $dark-charcoal-grey;
-        }
-      }
-      .seperator {
-        position: absolute;
-        background: $light-gray;
-        top: 0;
-        height: 100%;
-
-        &:nth-of-type(2) {
-          #{$right}: 75px;
-        }
-      }
-    }
-    .selected-filters-panel {
-      margin-bottom: 21px;
-
-      label {
-        position: relative;
-        border: 1px solid $light-gray-2;
-        padding: side-values(9px 25px 15px 15px);
-        @include margin-right(4px);
-        margin-bottom: 0;
-
-        &:last-of-type {
-          border-radius: corner-values(0 0 20px 0);
-          @include margin-right(0);
-        }
-        &:first-child {
-          border-radius: corner-values(20px 0 0 20px);
-        }
-        i {
-          position: absolute;
-          cursor: pointer;
-          @include font-size(8px);
-          #{$right}: 5px;
-          top: 5px;
-          color: $light-gray-2;
-        }
-      }
-      .btn-gray-secondary {
-        @include margin-left(10px);
-        padding: inherit;
-        text-transform: capitalize;
-      }
-    }
-
-    .selected-compare-panel {
-      margin-bottom: 30px;
-    }
-    .card {
-      border: 0;
-      border-radius: corner-values(20px 0 0 0);
-      .card-title {
-        padding-top: 20px;
-      }
-      label {
-        @include font-size(15px);
-        font-weight: normal;
-        color: $dark-charcoal-grey;
-        font-weight: normal;
-      }
-      .right-side-selection {
-        display: flex;
-        align-items: center;
-        @include font-size(14px);
-        .icon-list {
-          @include margin-right(10px);
-          cursor: pointer;
-          @include small-screen {
-            opacity: 1 !important;
-            @include margin-right(20px);
-          }
-        }
-        .icon-grid {
-          cursor: pointer;
-          @include small-screen {
-            opacity: 1 !important;
-          }
-        }
-        i {
-          position: relative;
-          @include font-size(24px);
-          @include small-screen {
-            @include padding-left(19px);
-            @include margin-right(20px);
-          }
-        }
-      }
-    }
-  }
+.results-container {
+  @extend .p-inner-sec;
+}
+.filter {
+  @include border-radius-div;
+  overflow: hidden;
+  background: $white;
+  @extend .list-unstyled;
 }
