--- a/scss/layouts/setting/_garage.scss
+++ b/scss/layouts/setting/_garage.scss
@@ -116,7 +116,7 @@
   .modal-content{
     background: $white !important;
     .modal-header{
-      #title{
+      .sec-header{
         h1{
           font-family: Roboto;
           font-size: 30px !important;
