--- a/scss/layouts/setting/_setting.scss
+++ b/scss/layouts/setting/_setting.scss
@@ -155,7 +155,7 @@
   max-width: 696px !important;
   .modal-title{
     margin-#{$left}: 37px;
-    #title{
+    .sec-header{
       h1{
       font-family: Roboto;
       font-size: 30px !important;
