--- a/scss/layouts/setting/_payment.scss
+++ b/scss/layouts/setting/_payment.scss
@@ -319,7 +319,7 @@
     background: $white;
     .modal-header{
       .modal-title{
-        #title{
+        .sec-header{
           h1{
             font-family: Roboto;
             @include font-size(30px);
